Nutch Change Log

Release 2.2 - Current Development

* NUTCH-1552 possibility of a NPE in index-more plugin (kaveh minooie via lewismc)

* NUTCH-1547 BasicIndexingFilter - Problem to index full title (Feng)

* NUTCH-1389 parsechecker and indexchecker to report truncated content (snagel)

* NUTCH-1419 parsechecker and indexchecker to report protocol status (snagel via lewismc)

* NUTCH-1038 Port IndexingFiltersChecker to 2.0 (snagel via lewismc)

* NUTCH-1532 Replace 'segment' mapping field with batchId (Feng +via lewismc)

* NUTCH-1533 Implement getPrevModifiedTime(), setPrevModifiedTime(), getBatchId() and setBatchId() accessors in o.a.n.storage.WebPage (Feng via lewismc)

* NUTCH-XX fix Elastic Search Ivy configuration (Binoy d via lewismc) 

* NUTCH-1542 "adddays" param for generator not present in 2.x (tejasp)

* NUTCH-1393 Display consistent usage of GeneratorJob with 1.X (Lufeng +via lewismc)

* NUTCH-1540 Add Gora buffered read and write maximum limits to nutch-default.xml configuration. (lewismc)

* NUTCH-842 AutoGenerate WebPage code (jnioche via lewismc)

* NUTCH-1536 Ant build file has hardcoded conf dir location (zm via lewismc)

* NUTCH-XX remove unused db.max.inlinks property in nutch-default.xml (lewismc)

* NUTCH-1284 Add site fetcher.max.crawl.delay as log output by default (Tejas Patil)

* NUTCH-1453 Substantiate tests for IndexingFilters (lufeng via lewismc)

* NUTCH-1274 Fix [cast] javac warnings (Tejas Patil via lewismc)

* NUTCH-1516 Nutch 2.x pom.xml out of sync with ivy.xml (lewismc)

* NUTCH-1510 Upgrade to Hadoop 1.1.1 (markus)

* NUTCH-1503 Configuration properties not in sync between FetcherReducer and nutch-default.xml (snagel + lewismc)

* NUTCH-1394 backport NUTCH-1232 Remove site field from index-basic (lewismc)

* NUTCH-1370 Expose exact number of urls injected @runtime (ferdy, snagel and lewismc)
   (includes commit for NUTCH-1471 make explicit which datastore urls are injected to)
